--- a/T5L OS BASE/Objects/T5L51.build_log.htm
+++ b/T5L OS BASE/Objects/T5L51.build_log.htm
@@ -21,8 +21,8 @@ Target DLL:      DWIN\BIN\ag8051.dll V1.00
 Dialog DLL:      TCore51.DLL V2.66.4.0
  
 <h2>Project:</h2>
-D:\Progamming\T5L_project\T5L OS BASE\T5L OS BASE.uvproj
-Project File Date:  05/04/2021
+C:\Users\admin\OneDrive\Máy tính\dwin_lcd_keil\T5L OS BASE\T5L OS BASE.uvproj
+Project File Date:  05/08/2021
 
 <h2>Output:</h2>
 Rebuild target 'Target 1'
@@ -37,7 +37,10 @@ compiling crc16.c...
 compiling user_fifo.c...
 compiling lcd_handler.c...
 compiling tstring.c...
+compiling uart_handler.c...
 linking...
+*** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
+    SEGMENT: ?PR?TEST?MAIN
 *** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
     SEGMENT: ?PR?_DELAYUS?SYS
 *** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
@@ -61,25 +64,21 @@ linking...
 *** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
     SEGMENT: ?PR?_CRC16TABLE?CRC16
 *** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
-    SEGMENT: ?PR?_USER_FIFO_GET?USER_FIFO
-*** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
-    SEGMENT: ?PR?USER_FIFO_GET_R_POINT?USER_FIFO
+    SEGMENT: ?PR?USER_FIFO_RESET?USER_FIFO
 *** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
     SEGMENT: ?PR?USER_FIFO_GET_W_POINT?USER_FIFO
-*** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
-    SEGMENT: ?PR?LCD_UPDATE_REAL_TIME?LCD_HANDLER
-Program Size: data=9.0 xdata=11208 code=6045
+Program Size: data=9.0 xdata=11219 code=7276
 creating hex file from ".\Objects\T5L51"...
 User command #1: .\AfterBuildRun.bat
-D:\Progamming\T5L_project\T5L OS BASE>copy Objects\T5L51.hex Download 
+C:\Users\admin\OneDrive\M y t¡nh\dwin_lcd_keil\T5L OS BASE>copy Objects\T5L51.hex Download 
         1 file(s) copied.
-D:\Progamming\T5L_project\T5L OS BASE>cd Download 
-D:\Progamming\T5L_project\T5L OS BASE\Download>srec_cat.exe T5L51.hex -Intel -o T5L51.bin -Binary  
-srec_cat: T5L51.hex: 8: warning: data records not in strictly ascending order
-    (expected >= 0x16D9, got 0x15F4)
-D:\Progamming\T5L_project\T5L OS BASE\Download>echo.
-".\Objects\T5L51" - 0 Error(s), 15 Warning(s).
-Build Time Elapsed:  00:00:01
+C:\Users\admin\OneDrive\M y t¡nh\dwin_lcd_keil\T5L OS BASE>cd Download 
+C:\Users\admin\OneDrive\M y t¡nh\dwin_lcd_keil\T5L OS BASE\Download>srec_cat.exe T5L51.hex -Intel -o T5L51.bin -Binary  
+srec_cat: T5L51.hex: 6: warning: data records not in strictly ascending order
+    (expected >= 0x13EB, got 0x0006)
+C:\Users\admin\OneDrive\M y t¡nh\dwin_lcd_keil\T5L OS BASE\Download>echo.
+".\Objects\T5L51" - 0 Error(s), 14 Warning(s).
+Build Time Elapsed:  00:00:02
 </pre>
 </body>
 </html>
