update standby, brightness, sound feature

--- a/T5L OS BASE/Objects/T5L51.build_log.htm
+++ b/T5L OS BASE/Objects/T5L51.build_log.htm
@@ -40,8 +40,6 @@ compiling tstring.c...
 compiling uart_handler.c...
 linking...
 *** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
-    SEGMENT: ?PR?TEST?MAIN
-*** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
     SEGMENT: ?PR?_DELAYUS?SYS
 *** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
     SEGMENT: ?PR?INITCFG?SYS
@@ -49,8 +47,6 @@ linking...
     SEGMENT: ?PR?UART3INIT?UART
 *** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
     SEGMENT: ?PR?_UART3SENDSTR?UART
-*** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
-    SEGMENT: ?PR?UART4INIT?UART
 *** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
     SEGMENT: ?PR?_UART4SENDSTR?UART
 *** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
@@ -60,14 +56,26 @@ linking...
 *** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
     SEGMENT: ?PR?T0_INIT?TIMER
 *** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
-    SEGMENT: ?PR?T2_INIT?TIMER
-*** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
     SEGMENT: ?PR?_CRC16TABLE?CRC16
 *** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
-    SEGMENT: ?PR?USER_FIFO_RESET?USER_FIFO
+    SEGMENT: ?PR?_USER_FIFO_RESET_T?USER_FIFO
 *** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
-    SEGMENT: ?PR?USER_FIFO_GET_W_POINT?USER_FIFO
-Program Size: data=9.0 xdata=11219 code=7276
+    SEGMENT: ?PR?_USER_FIFO_GET_W_POINT_T?USER_FIFO
+*** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
+    SEGMENT: ?PR?_LCD_SEND_RELAY_CONTROL_CMD?UART_HANDLER
+*** WARNING L15: MULTIPLE CALL TO SEGMENT
+    SEGMENT: ?PR?_USER_FIFO_POP_T?USER_FIFO
+    CALLER1: ?C_C51STARTUP
+    CALLER2: ?PR?UART2_ISR_PC?UART
+*** WARNING L15: MULTIPLE CALL TO SEGMENT
+    SEGMENT: ?PR?_USER_FIFO_POP_T?USER_FIFO
+    CALLER1: ?PR?UART2_ISR_PC?UART
+    CALLER2: ?PR?UART4_RX_ISR_PC?UART
+*** WARNING L15: MULTIPLE CALL TO SEGMENT
+    SEGMENT: ?PR?_USER_FIFO_PUSH_T?USER_FIFO
+    CALLER1: ?PR?UART2_ISR_PC?UART
+    CALLER2: ?PR?UART4_RX_ISR_PC?UART
+Program Size: data=9.0 xdata=11158 code=8867
 creating hex file from ".\Objects\T5L51"...
 User command #1: .\AfterBuildRun.bat
 C:\Users\admin\OneDrive\M y t¡nh\dwin_lcd_keil\T5L OS BASE>copy Objects\T5L51.hex Download 
@@ -75,9 +83,9 @@ C:\Users\admin\OneDrive\M y t¡nh\dwin_lcd_keil\T5L OS BASE>copy Objects\T5L51.he
 C:\Users\admin\OneDrive\M y t¡nh\dwin_lcd_keil\T5L OS BASE>cd Download 
 C:\Users\admin\OneDrive\M y t¡nh\dwin_lcd_keil\T5L OS BASE\Download>srec_cat.exe T5L51.hex -Intel -o T5L51.bin -Binary  
 srec_cat: T5L51.hex: 6: warning: data records not in strictly ascending order
-    (expected >= 0x13EB, got 0x0006)
+    (expected >= 0x1812, got 0x0016)
 C:\Users\admin\OneDrive\M y t¡nh\dwin_lcd_keil\T5L OS BASE\Download>echo.
-".\Objects\T5L51" - 0 Error(s), 14 Warning(s).
+".\Objects\T5L51" - 0 Error(s), 15 Warning(s).
 Build Time Elapsed:  00:00:02
 </pre>
 </body>
