--- a/T5L OS BASE/Objects/T5L51.build_log.htm
+++ b/T5L OS BASE/Objects/T5L51.build_log.htm
@@ -63,6 +63,8 @@ linking...
     SEGMENT: ?PR?_USER_FIFO_GET_W_POINT_T?USER_FIFO
 *** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
     SEGMENT: ?PR?_LCD_SEND_RELAY_CONTROL_CMD?UART_HANDLER
+*** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
+    SEGMENT: ?PR?_INIT_MEMPOOL?INIT_MEM
 *** WARNING L15: MULTIPLE CALL TO SEGMENT
     SEGMENT: ?PR?_USER_FIFO_POP_T?USER_FIFO
     CALLER1: ?C_C51STARTUP
@@ -75,7 +77,7 @@ linking...
     SEGMENT: ?PR?_USER_FIFO_PUSH_T?USER_FIFO
     CALLER1: ?PR?UART2_ISR_PC?UART
     CALLER2: ?PR?UART4_RX_ISR_PC?UART
-Program Size: data=9.0 xdata=11158 code=8867
+Program Size: data=9.0 xdata=11169 code=9170
 creating hex file from ".\Objects\T5L51"...
 User command #1: .\AfterBuildRun.bat
 C:\Users\admin\OneDrive\M y t¡nh\dwin_lcd_keil\T5L OS BASE>copy Objects\T5L51.hex Download 
@@ -83,9 +85,9 @@ C:\Users\admin\OneDrive\M y t¡nh\dwin_lcd_keil\T5L OS BASE>copy Objects\T5L51.he
 C:\Users\admin\OneDrive\M y t¡nh\dwin_lcd_keil\T5L OS BASE>cd Download 
 C:\Users\admin\OneDrive\M y t¡nh\dwin_lcd_keil\T5L OS BASE\Download>srec_cat.exe T5L51.hex -Intel -o T5L51.bin -Binary  
 srec_cat: T5L51.hex: 6: warning: data records not in strictly ascending order
-    (expected >= 0x1812, got 0x0016)
+    (expected >= 0x18EE, got 0x0016)
 C:\Users\admin\OneDrive\M y t¡nh\dwin_lcd_keil\T5L OS BASE\Download>echo.
-".\Objects\T5L51" - 0 Error(s), 15 Warning(s).
+".\Objects\T5L51" - 0 Error(s), 16 Warning(s).
 Build Time Elapsed:  00:00:02
 </pre>
 </body>
